# auto_field_trait

./: Cargo.toml  README.md  README.zh-CN.md
src/: auto_field_trait.rs  config.rs  extract_hook.rs  lib.rs  query_hook.rs
