[package]
name = "auto_field_trait"
version = "0.1.0"
edition = "2024"
categories = ["database"]
keywords = ["orm", "sql-database", "spring"]

[dependencies]
async-trait = "0.1.89"
sea-orm ={version= "1.1.19", optional = true}
sqlparser = "0.60"
regex = "1"
lazy_static = "1"
parking_lot = "0.12"
log = "0.4"

# 添加spring-sea-orm所需的依赖
schemars = "1.1.0"
serde = { version = "1.0.228", features = ["derive"] }
spring = "0.4.7"
spring-web = { version = "0.4.13", optional = true}
thiserror = "2"
anyhow = "1.0.79"

# 特性定义
[features]
default = ["sea-orm/runtime-tokio-native-tls"]
mysql = ["sea-orm/sqlx-mysql"]
sqlite = ["sea-orm/sqlx-sqlite"]
postgres = ["sea-orm/sqlx-postgres"]
with-web = ["spring-web"]
with-web-openapi = ["spring-web/openapi"]
